--- a/config/content.htm
+++ b/config/content.htm
@@ -95,34 +95,47 @@
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qMkSTBJOs5A" width="560"></iframe></p>
 <h2>W10</h2>
 <p>教學用virtualbox在隨身碟做一個虛擬主機<yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">, 可用來開發網際可程式化機械設計合成系統</yt-formatted-string></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/IqTN7dyz3FM" width="560"></iframe></p>
-<p></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6GFHDRnLw-s" width="560"></iframe></p>
-<p></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/XV-etyLPzPo" width="560"></iframe></p>
+<p>練習實習任務三</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/lY8j-Uz96SA?t=46s" width="560"></iframe></p>
+<p>並將之前少的影片補上</p>
+<p>包括製作可攜系統跟bobbleRob tutorial</p>
 <h2>W11</h2>
 <p>開始分組做期末報告, 並由組長做協同者, 開始更新期末專案</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/_dF92K0jG8U" width="560"></iframe></p>
 <p></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ncF0c1pvBzg" width="560"></iframe></p>
+<p>建立虛擬主機並利用Host-only網路連線下的近端測試</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZMSunwEQ0No" width="560"></iframe></p>
+<p></p>
 <h2>W12</h2>
-<p></p>
-<h2>W13</h2>
 <p>今天開始分配期末報告的工作任務</p>
 <p>我目前是在做送球機構</p>
 <p>第一次門框畫好後</p>
 <p>才發現卡到邊框</p>
 <p>所以做了修改</p>
-<p>門框</p>
-<p><a href="https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/face386b0bb2c0c1fa8f4802">https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/face386b0bb2c0c1fa8f4802</a></p>
-<p>組合件</p>
-<p><a href="https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/22c1a2c3652c158f4182a2ad">https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/22c1a2c3652c158f4182a2ad</a></p>
+<p><a href="https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/face386b0bb2c0c1fa8f4802">門框</a></p>
+<p><a href="https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/22c1a2c3652c158f4182a2ad">組合件</a></p>
 <p>門框在V-rep模擬的狀況</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Ei2KLT8OeA0" width="560"></iframe>第二次修改門框後的模擬</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/nczBcHk52tc" width="560"></iframe></p><h2>W14</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/nczBcHk52tc" width="560"></iframe></p>
+<h2>W13</h2>
+<p><a href="https://cad.onshape.com/documents/66feb481cd24f89f41aba07f/w/44386fafdc7d7515dd51458e/e/d842adf8eb6d1d0280a7bd23">建立送球機構的單邊軌道</a></p>
+<p>並匯入到V-rep進行模擬</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/E2-pMWhpLZc" width="560"></iframe></p>
+<h2>W14</h2>
+<p>建立送球機構的雙邊軌道</p>
+<p>並匯入到V-rep進行模擬</p>
+<p><a href="https://cad.onshape.com/documents/b18361a82967351a03443cb3/w/57dbf787f13f8e59f9456130/e/f395ea88668a19d13c53dc5b">onshape</a></p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/qCcklTJMO0c" width="560"></iframe><span><br/></span></p>
+<p>第二個版本</p>
+<p>將球道隱藏在球檯中</p>
+<p>避免與球員桿干涉</p>
+<p><a href="https://cad.onshape.com/documents/bae8bc92c292636ff6a07042/w/36dd5447b2c7b1e761303f8e/e/d3856f293649335c602fab25">onshape</a></p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/cnAd8WULxA4" width="560"></iframe></p>
 <p></p>
 <h2>W15</h2>
-<p></p>
+<p>將送球機構跟球員組合在一起</p>
+<p><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/f412ca36103c51131b2bf475">第一版本</a></p>
+<p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/15a3920124f3878336a016bc">第二版本</a></p>
+<p>並且將自己的送球機構pull request到期末倉儲</p>
 <h2>W16</h2>
 <p></p>
 <h2>W17</h2>
@@ -130,6 +143,7 @@
 <h1>期中影片</h1>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qMkSTBJOs5A" width="560"></iframe></p>
 <h1>個人影片</h1>
+<p><a href="https://www.youtube.com/channel/UC3Q2XeaQy3mBzOziZ6s6rhg/videos">youtube頻道</a></p>
 <p>建立<yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">可攜系統-1</yt-formatted-string></p>
 <p><img alt="" src="https://www.youtube.com/watch?v=_KHJyEbXOg8&amp;t=2s"/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/_KHJyEbXOg8?t=2s" width="560"></iframe></p>
 <p>建立<yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">可攜系統-2</yt-formatted-string></p>
@@ -138,8 +152,27 @@
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/iYqxYQV8FZc" width="560"></iframe></p>
 <p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">期中影片</yt-formatted-string></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/iYqxYQV8FZc" width="560"></iframe></p>
-<p>送球機構</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/VuySdgoiAL8" width="560"></iframe></p>
+<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">補做BubbleRob tutorial-1</yt-formatted-string></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/0iOS6LiqAjM" width="560"></iframe></p>
+<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">補做BubbleRob tutorial-2</yt-formatted-string></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZIbJa1tlOHY?t=109s" width="560"></iframe></p>
+<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">製作BubbleRob tutorial遇到的問題</yt-formatted-string></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/djo_oHHY60g?t=15s" width="560"></iframe></p>
+<p>實習任務三</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/lY8j-Uz96SA?t=46s" width="560"></iframe></p>
+<p>建立虛擬主機並利用Host-only 網路連線下的近端測試</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZMSunwEQ0No" width="560"></iframe></p>
+<p>門框V-rep測試-1</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Ei2KLT8OeA0?t=1s" width="560"></iframe></p>
+<p>門框V-rep測試-2</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/nczBcHk52tc" width="560"></iframe></p>
+<p>送球機構單邊V-rep模擬測試</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/E2-pMWhpLZc" width="560"></iframe></p>
+<p>送球機構雙邊V-rep模擬測試</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qCcklTJMO0c" width="560"></iframe></p>
+<p>送球機構雙邊V-rep模擬測試(第二版本)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/cnAd8WULxA4?t=182s" width="560"></iframe></p>
+<p></p>
 <p></p><h1>協同倉儲</h1>
 <p></p>
 <p>小組倉儲: <a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1</a></p>
@@ -147,3 +180,5 @@
 <p>小組blog: <a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/blog" rel="nofollow">https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/blog</a></p>
 <p>個人倉儲: <a href="https://github.com/s40423160/cd2019">https://github.com/s40423160/cd2019</a></p>
 <p>個人投影片: <a href="https://s40423160.github.io/cd2019/reveal/index.html#/">https://s40423160.github.io/cd2019/reveal/index.html#/</a></p>
+<p>期末倉儲:<a href="https://github.com/scrum-1/cd2019b">https://github.com/scrum-1/cd2019b</a></p>
+<p>期末網站: <a href="http://cpgx.kmol.info/cd2019b/content/index.html">http://cpgx.kmol.info/cd2019b/content/index.html</a></p>
