--- a/content/W12.html
+++ b/content/W12.html
@@ -68,5 +68,14 @@ $(function(){
 </ul>
 </confmenu></header>
 <div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='W16.html'>W16</a><li><a href='W17.html'>W17</a></li></ul><li><a href='期中影片.html'>期中影片</a><li><a href='個人影片.html'>個人影片</a><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>W11 << <a href='W11.html'>Previous</a> <a href='W13.html'>Next</a> >> W13<br /><h1>W12</h1>
-<p></p>
+<p>今天開始分配期末報告的工作任務</p>
+<p>我目前是在做送球機構</p>
+<p>第一次門框畫好後</p>
+<p>才發現卡到邊框</p>
+<p>所以做了修改</p>
+<p><a href="https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/face386b0bb2c0c1fa8f4802">門框</a></p>
+<p><a href="https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/22c1a2c3652c158f4182a2ad">組合件</a></p>
+<p>門框在V-rep模擬的狀況</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Ei2KLT8OeA0" width="560"></iframe>第二次修改門框後的模擬</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/nczBcHk52tc" width="560"></iframe></p>
 <br />W11 << <a href='W11.html'>Previous</a> <a href='W13.html'>Next</a> >> W13</section></div></body></html>
