--- a/content/協同倉儲.html
+++ b/content/協同倉儲.html
@@ -73,4 +73,6 @@ $(function(){
 <p>小組網站: <a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1" rel="nofollow">https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1</a></p>
 <p>小組blog: <a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/blog" rel="nofollow">https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/blog</a></p>
 <p>個人倉儲: <a href="https://github.com/s40423160/cd2019">https://github.com/s40423160/cd2019</a></p>
-<p>個人投影片: <a href="https://s40423160.github.io/cd2019/reveal/index.html#/">https://s40423160.github.io/cd2019/reveal/index.html#/</a></p><br />個人影片 << <a href='個人影片.html'>Previous</a> </section></div></body></html>
+<p>個人投影片: <a href="https://s40423160.github.io/cd2019/reveal/index.html#/">https://s40423160.github.io/cd2019/reveal/index.html#/</a></p>
+<p>期末倉儲:<a href="https://github.com/scrum-1/cd2019b">https://github.com/scrum-1/cd2019b</a></p>
+<p>期末網站: <a href="http://cpgx.kmol.info/cd2019b/content/index.html">http://cpgx.kmol.info/cd2019b/content/index.html</a></p><br />個人影片 << <a href='個人影片.html'>Previous</a> </section></div></body></html>
