--- a/content/送球機構.html
+++ b/content/送球機構.html
@@ -67,18 +67,17 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='W16.html'>W16</a><li><a href='W17.html'>W17</a></li></ul><li><a href='期中影片.html'>期中影片</a><li><a href='個人影片.html'>個人影片</a><ul><li><a href='建立可攜裝置.html'>建立可攜裝置</a><li><a href='BubbleRob tutorial.html'>BubbleRob tutorial</a><li><a href='實習任務三.html'>實習任務三</a><li><a href='建立虛擬主機.html'>建立虛擬主機</a><li><a href='送球機構.html'>送球機構</a><li><a href='系統功能展示.html'>系統功能展示</a></li></ul><li><a href='送球裝置.html'>送球裝置</a><li><a href='期末影片.html'>期末影片</a><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>W15 << <a href='W15.html'>Previous</a> <a href='W17.html'>Next</a> >> W17<br /><h1>W16</h1>
-<p>因為送球機構做完了</p>
-<p>所以開始做V-rep手足球系統模擬</p>
-<p>從手足球員方向鍵測試</p>
-<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/PeQFnNMEwLo" width="560"></iframe></p>
-<p>到足球員跟桿子做連接</p>
-<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/LrOi0nHQ1mw" width="560"></iframe></p>
-<p>設定滑動跟轉動的部分(中間沒注意到錄影停止了)</p>
-<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/8E2mgRGWq94" width="560"></iframe></p>
-<p><a href="https://drive.google.com/open?id=1-17D2C56AdQX6Gk8Cn6G0hKr21rwO-Id">人對人</a></p>
-<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/I19GK0fYO_E" width="560"></iframe></p>
-<p><a href="https://drive.google.com/open?id=1dYRX0tUDZCntjZT8Oc9-1vmfTlMprv0Z">人對電腦</a></p>
-<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/OAVXWbMAh4I" width="560"></iframe></p>
-<p><a href="https://drive.google.com/open?id=11aCOQWTxuy1qIem9NXHCeACJTQzI17YD">電腦對電腦</a></p>
-<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/qP5MVSiju8U" width="560"></iframe></p><br />W15 << <a href='W15.html'>Previous</a> <a href='W17.html'>Next</a> >> W17</section></div></body></html>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='W16.html'>W16</a><li><a href='W17.html'>W17</a></li></ul><li><a href='期中影片.html'>期中影片</a><li><a href='個人影片.html'>個人影片</a><ul><li><a href='建立可攜裝置.html'>建立可攜裝置</a><li><a href='BubbleRob tutorial.html'>BubbleRob tutorial</a><li><a href='實習任務三.html'>實習任務三</a><li><a href='建立虛擬主機.html'>建立虛擬主機</a><li><a href='送球機構.html'>送球機構</a><li><a href='系統功能展示.html'>系統功能展示</a></li></ul><li><a href='送球裝置.html'>送球裝置</a><li><a href='期末影片.html'>期末影片</a><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>建立虛擬主機 << <a href='建立虛擬主機.html'>Previous</a> <a href='系統功能展示.html'>Next</a> >> 系統功能展示<br /><h1>送球機構</h1>
+<p></p>
+<p>門框V-rep測試-1</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Ei2KLT8OeA0?t=1s" width="560"></iframe></p>
+<p>門框V-rep測試-2</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/nczBcHk52tc" width="560"></iframe></p>
+<p>送球機構單邊V-rep模擬測試</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/E2-pMWhpLZc" width="560"></iframe></p>
+<p>送球機構雙邊V-rep模擬測試</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qCcklTJMO0c" width="560"></iframe></p>
+<p>送球機構雙邊V-rep模擬測試(第二版本)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/cnAd8WULxA4?t=182s" width="560"></iframe></p>
+<p></p>
+<br />建立虛擬主機 << <a href='建立虛擬主機.html'>Previous</a> <a href='系統功能展示.html'>Next</a> >> 系統功能展示</section></div></body></html>
