--- a/config/content.htm
+++ b/config/content.htm
@@ -137,31 +137,55 @@
 <p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/15a3920124f3878336a016bc">第二版本</a></p>
 <p>並且將自己的送球機構pull request到期末倉儲</p>
 <h2>W16</h2>
-<p></p>
-<h2>W17</h2>
+<p>因為送球機構做完了</p>
+<p>所以開始做V-rep手足球系統模擬</p>
+<p>從手足球員方向鍵測試</p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/PeQFnNMEwLo" width="560"></iframe></p>
+<p>到足球員跟桿子做連接</p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/LrOi0nHQ1mw" width="560"></iframe></p>
+<p>設定滑動跟轉動的部分(中間沒注意到錄影停止了)</p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/8E2mgRGWq94" width="560"></iframe></p>
+<p><a href="https://drive.google.com/open?id=1-17D2C56AdQX6Gk8Cn6G0hKr21rwO-Id">人對人</a></p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/I19GK0fYO_E" width="560"></iframe></p>
+<p><a href="https://drive.google.com/open?id=1dYRX0tUDZCntjZT8Oc9-1vmfTlMprv0Z">人對電腦</a></p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/OAVXWbMAh4I" width="560"></iframe></p>
+<p><a href="https://drive.google.com/open?id=11aCOQWTxuy1qIem9NXHCeACJTQzI17YD">電腦對電腦</a></p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/qP5MVSiju8U" width="560"></iframe></p><h2>W17</h2>
 <p></p>
 <h1>期中影片</h1>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qMkSTBJOs5A" width="560"></iframe></p>
 <h1>個人影片</h1>
 <p><a href="https://www.youtube.com/channel/UC3Q2XeaQy3mBzOziZ6s6rhg/videos">youtube頻道</a></p>
+<h2>建立可攜裝置</h2>
 <p>建立<yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">可攜系統-1</yt-formatted-string></p>
 <p><img alt="" src="https://www.youtube.com/watch?v=_KHJyEbXOg8&amp;t=2s"/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/_KHJyEbXOg8?t=2s" width="560"></iframe></p>
 <p>建立<yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">可攜系統-2</yt-formatted-string></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/r7JNB57n-qE" width="560"></iframe></p>
-<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">BubbleRob tutorial</yt-formatted-string></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/iYqxYQV8FZc" width="560"></iframe></p>
-<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">期中影片</yt-formatted-string></p>
+<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style=""></yt-formatted-string></p>
+<h2>BubbleRob tutorial</h2>
+<p>BubbleRob tutorial</p>
+<p></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/iYqxYQV8FZc" width="560"></iframe></p>
 <p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">補做BubbleRob tutorial-1</yt-formatted-string></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/0iOS6LiqAjM" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="//www.youtube.com/embed/0iOS6LiqAjM" width="560"></iframe></p>
 <p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">補做BubbleRob tutorial-2</yt-formatted-string></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZIbJa1tlOHY?t=109s" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="//www.youtube.com/embed/ZIbJa1tlOHY?t=109s" width="560"></iframe></p>
 <p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">製作BubbleRob tutorial遇到的問題</yt-formatted-string></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/djo_oHHY60g?t=15s" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="//www.youtube.com/embed/djo_oHHY60g?t=15s" width="560"></iframe></p>
+<p></p>
+<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style=""></yt-formatted-string></p>
+<h2>實習任務三</h2>
 <p>實習任務三</p>
+<p></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/lY8j-Uz96SA?t=46s" width="560"></iframe></p>
+<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style=""></yt-formatted-string></p>
+<h2>建立虛擬主機</h2>
 <p>建立虛擬主機並利用Host-only 網路連線下的近端測試</p>
+<p></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZMSunwEQ0No" width="560"></iframe></p>
+<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style=""></yt-formatted-string></p>
+<h2>送球機構</h2>
+<p></p>
 <p>門框V-rep測試-1</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Ei2KLT8OeA0?t=1s" width="560"></iframe></p>
 <p>門框V-rep測試-2</p>
@@ -173,7 +197,46 @@
 <p>送球機構雙邊V-rep模擬測試(第二版本)</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/cnAd8WULxA4?t=182s" width="560"></iframe></p>
 <p></p>
-<p></p><h1>協同倉儲</h1>
+<h2>系統功能展示</h2>
+<p></p>
+<p>從手足球員方向鍵測試</p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/PeQFnNMEwLo" width="560"></iframe></p>
+<p>到足球員跟桿子做連接</p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/LrOi0nHQ1mw" width="560"></iframe></p>
+<p>設定滑動跟轉動的部分(中間沒注意到錄影停止了)</p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/8E2mgRGWq94" width="560"></iframe></p>
+<p><a href="https://drive.google.com/open?id=1-17D2C56AdQX6Gk8Cn6G0hKr21rwO-Id">人對人</a></p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/I19GK0fYO_E" width="560"></iframe></p>
+<p><a href="https://drive.google.com/open?id=1dYRX0tUDZCntjZT8Oc9-1vmfTlMprv0Z">人對電腦</a></p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/OAVXWbMAh4I" width="560"></iframe></p>
+<p><a href="https://drive.google.com/open?id=11aCOQWTxuy1qIem9NXHCeACJTQzI17YD">電腦對電腦</a></p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/qP5MVSiju8U" width="560"></iframe></p>
+<h1>送球裝置</h1>
+<p>門框</p>
+<p><img alt="" height="628" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/ball-sending-1.png" width="783"/></p>
+<p>軌道</p>
+<p><img alt="" height="614" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/ball-sending-2.png" width="1128"/></p>
+<p>因為軌道設計成斜的 所以球會自己滾到低處</p>
+<p><img alt="" height="251" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/ball-sending-3.png" width="1062"/></p>
+<p>圓管 球藉著圓管升到高點可以重新回到球檯中</p>
+<p><img alt="" height="533" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/ball-sending-4.png" width="499"/></p>
+<p>螺旋管 旋轉讓球可以升到高點</p>
+<p><img alt="" height="553" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/ball-sending-5.png" width="352"/></p>
+<p>中間的軌道 因為重兩邊都可以進球到圓管中會有許多設計上的問題</p>
+<p>所以求先送到軌道中間再進到圓管中</p>
+<p><img alt="" height="307" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/ball-sending-6.png" width="410"/></p>
+<p>第一版本的送球機構</p>
+<p><img alt="" height="678" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/ball-sending-7.png" width="989"/></p>
+<p><span><a href="https://cad.onshape.com/documents/b18361a82967351a03443cb3/w/57dbf787f13f8e59f9456130/e/f395ea88668a19d13c53dc5b">送球機構第一版本</a></span></p>
+<p><a href="https://cad.onshape.com/documents/66feb481cd24f89f41aba07f/w/44386fafdc7d7515dd51458e/e/d842adf8eb6d1d0280a7bd23"></a>V-rep模擬</p>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/qCcklTJMO0c" width="560"></iframe></p>
+<p><span> </span></p>
+<p><span><a href="https://cad.onshape.com/documents/bae8bc92c292636ff6a07042/w/36dd5447b2c7b1e761303f8e/e/d3856f293649335c602fab25">送球機構第二版本</a>(</span><span>將軌道隱藏在球檯中避免實際使用中軌道跟球員桿有干涉)</span><br/><span></span></p>
+<p><span>V-rep模擬</span></p>
+<p><span></span></p>
+<p><span></span><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/cnAd8WULxA4" width="560"></iframe></p><h1>期末影片</h1>
+<p></p>
+<h1>協同倉儲</h1>
 <p></p>
 <p>小組倉儲: <a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1</a></p>
 <p>小組網站: <a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1" rel="nofollow">https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1</a></p>
