--- a/content/個人影片.html
+++ b/content/個人影片.html
@@ -67,35 +67,6 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='W16.html'>W16</a><li><a href='W17.html'>W17</a></li></ul><li><a href='期中影片.html'>期中影片</a><li><a href='個人影片.html'>個人影片</a><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>期中影片 << <a href='期中影片.html'>Previous</a> <a href='協同倉儲.html'>Next</a> >> 協同倉儲<br /><h1>個人影片</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='W16.html'>W16</a><li><a href='W17.html'>W17</a></li></ul><li><a href='期中影片.html'>期中影片</a><li><a href='個人影片.html'>個人影片</a><ul><li><a href='建立可攜裝置.html'>建立可攜裝置</a><li><a href='BubbleRob tutorial.html'>BubbleRob tutorial</a><li><a href='實習任務三.html'>實習任務三</a><li><a href='建立虛擬主機.html'>建立虛擬主機</a><li><a href='送球機構.html'>送球機構</a><li><a href='系統功能展示.html'>系統功能展示</a></li></ul><li><a href='送球裝置.html'>送球裝置</a><li><a href='期末影片.html'>期末影片</a><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>期中影片 << <a href='期中影片.html'>Previous</a> <a href='建立可攜裝置.html'>Next</a> >> 建立可攜裝置<br /><h1>個人影片</h1>
 <p><a href="https://www.youtube.com/channel/UC3Q2XeaQy3mBzOziZ6s6rhg/videos">youtube頻道</a></p>
-<p>建立<yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">可攜系統-1</yt-formatted-string></p>
-<p><img alt="" src="https://www.youtube.com/watch?v=_KHJyEbXOg8&amp;t=2s"/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/_KHJyEbXOg8?t=2s" width="560"></iframe></p>
-<p>建立<yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">可攜系統-2</yt-formatted-string></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/r7JNB57n-qE" width="560"></iframe></p>
-<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">BubbleRob tutorial</yt-formatted-string></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/iYqxYQV8FZc" width="560"></iframe></p>
-<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">期中影片</yt-formatted-string></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/iYqxYQV8FZc" width="560"></iframe></p>
-<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">補做BubbleRob tutorial-1</yt-formatted-string></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/0iOS6LiqAjM" width="560"></iframe></p>
-<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">補做BubbleRob tutorial-2</yt-formatted-string></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZIbJa1tlOHY?t=109s" width="560"></iframe></p>
-<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">製作BubbleRob tutorial遇到的問題</yt-formatted-string></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/djo_oHHY60g?t=15s" width="560"></iframe></p>
-<p>實習任務三</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/lY8j-Uz96SA?t=46s" width="560"></iframe></p>
-<p>建立虛擬主機並利用Host-only 網路連線下的近端測試</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZMSunwEQ0No" width="560"></iframe></p>
-<p>門框V-rep測試-1</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Ei2KLT8OeA0?t=1s" width="560"></iframe></p>
-<p>門框V-rep測試-2</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/nczBcHk52tc" width="560"></iframe></p>
-<p>送球機構單邊V-rep模擬測試</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/E2-pMWhpLZc" width="560"></iframe></p>
-<p>送球機構雙邊V-rep模擬測試</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qCcklTJMO0c" width="560"></iframe></p>
-<p>送球機構雙邊V-rep模擬測試(第二版本)</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/cnAd8WULxA4?t=182s" width="560"></iframe></p>
-<p></p>
-<p></p><br />期中影片 << <a href='期中影片.html'>Previous</a> <a href='協同倉儲.html'>Next</a> >> 協同倉儲</section></div></body></html>
+<br />期中影片 << <a href='期中影片.html'>Previous</a> <a href='建立可攜裝置.html'>Next</a> >> 建立可攜裝置</section></div></body></html>
