--- a/config/content.htm
+++ b/config/content.htm
@@ -1,4 +1,13 @@
-<h1>課程</h1>
+<h1>簡介</h1>
+<p>國立虎尾科技大學 機械設計工程系 協同產品設計實習</p>
+<p>設計四甲  許育誠  40423160</p>
+<p>個人倉儲: <a href="https://github.com/s40423160/cd2019">https://github.com/s40423160/cd2019</a></p>
+<p>個人投影片: <a href="https://s40423160.github.io/cd2019/reveal/index.html#/">https://s40423160.github.io/cd2019/reveal/index.html#/</a></p>
+<p>小組倉儲: <a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1</a></p>
+<p>小組網站: <a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1" rel="nofollow">https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1</a></p>
+<p>小組blog: <a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/blog" rel="nofollow">https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/blog</a></p>
+<p>期末倉儲:<a href="https://github.com/scrum-1/cd2019b">https://github.com/scrum-1/cd2019b</a></p>
+<p>期末網站: <a href="http://cpgx.kmol.info/cd2019b/content/index.html">http://cpgx.kmol.info/cd2019b/content/index.html</a></p><h1>課程</h1>
 <p><span>自 1990 年 <a href="https://en.wikipedia.org/wiki/HTML">HTML</a> 與 <a href="https://en.wikipedia.org/wiki/World_Wide_Web">WWW</a> 伺服器首度出現在一台 <a href="https://en.wikipedia.org/wiki/NeXT">NeXT</a> 電腦上, 就已經揭示一個新世代的開始, 經過近 30 年的發展, 目前的網際環境已經能夠與單機操作系統上的應用程式緊密結合, 許多應用程式的開發, 透過網路與分散式版次管理系統, 幾乎隨時都在持續改進.<br/><br/>身為機械設計工程師, 必須明確了解在網際技術不斷推升的歷程, 過去厚重且無法分割的大型套件, 將逐漸被敏捷可攜的雲端應用所取代, <a href="https://en.wikipedia.org/wiki/Onshape">Onshape</a> 的開發團隊, 在 2012 成立時, 便已清楚看到此一趨勢, 使用者只要透過瀏覽器或 App 就能協同進行產品的機械設計與分析.<br/><br/>但是, 一套試圖集大成的雲端套件, 絕無法滿足未來網際時代新產品開發過程中的諸多需求, 必須由每一位機械設計工程師做起, 充分了解網路與電腦的應用範圍, 在既有基礎上, 有能力在網際環境中搭建屬於自己能夠掌控的流程, 開發合用的雲端程式.</span></p>
 <p><span>為了讓協同產品開發過程中的表達不至於混亂, 於是導入分散式版次管理的工具, 包括 Git 與 Fossil SCM, 為了能夠善用電腦與網路進行表達, 於是將靜態內容放在 Github Pages 或自行架設的 Nginx 伺服器中, 至於能夠即時更動的動態內容系統則採用雲端 Heroku 或自行架設的 uwsgi 網際環境中.</span></p>
 <p><span>為了能夠快速讓產品開發者將概念轉化為數位模擬系統, KMOL 採用 Python 建構軟體雛形, 並設法利用 Cython 技術, 以 C++ 的執行速度進行工程分析.<br/><br/>為了讓成員有機會一窺各種開源工具的內部設計, KMOL 在 Windows 10 64 位元環境中以 Msys2 編譯 Solvespace、Fossil SCM、V-rep 以及 Range CAE 套件.</span></p>
@@ -150,7 +159,8 @@
 <p><a href="https://drive.google.com/open?id=1dYRX0tUDZCntjZT8Oc9-1vmfTlMprv0Z">人對電腦</a></p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/OAVXWbMAh4I" width="560"></iframe></p>
 <p><a href="https://drive.google.com/open?id=11aCOQWTxuy1qIem9NXHCeACJTQzI17YD">電腦對電腦</a></p>
-<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/qP5MVSiju8U" width="560"></iframe></p><h2>W17</h2>
+<p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/qP5MVSiju8U" width="560"></iframe></p>
+<h2>W17</h2>
 <p></p>
 <h1>期中影片</h1>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qMkSTBJOs5A" width="560"></iframe></p>
@@ -212,25 +222,40 @@
 <p><a href="https://drive.google.com/open?id=11aCOQWTxuy1qIem9NXHCeACJTQzI17YD">電腦對電腦</a></p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/qP5MVSiju8U" width="560"></iframe></p>
 <h1>送球裝置</h1>
+<p>第一版本</p>
 <p>門框</p>
-<p><img alt="" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages/images/ball-sending-1.png"/></p>
+<p><img alt="" height="628" src="/images/ball-sending-1.png" width="783"/></p>
 <p>軌道</p>
-<p><img alt="" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages/images/ball-sending-2.png"/></p>
+<p><img alt="" height="614" src="/images/ball-sending-2.png" width="1128"/></p>
 <p>因為軌道設計成斜的 所以球會自己滾到低處</p>
-<p><img alt="" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages/images/ball-sending-3.png"/></p>
+<p><img alt="" height="251" src="/images/ball-sending-3.png" width="1062"/></p>
 <p>圓管 球藉著圓管升到高點可以重新回到球檯中</p>
-<p><img alt="" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages/images/ball-sending-4.png"/></p>
+<p><img alt="" height="533" src="/images/ball-sending-4.png" width="499"/></p>
 <p>螺旋管 旋轉讓球可以升到高點</p>
-<p><img alt="" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages/images/ball-sending-5.png"/></p>
+<p><img alt="" height="553" src="/images/ball-sending-5.png" width="352"/></p>
 <p>中間的軌道 因為重兩邊都可以進球到圓管中會有許多設計上的問題</p>
 <p>所以求先送到軌道中間再進到圓管中</p>
-<p><img alt="" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages/images/ball-sending-6.png"/></p>
+<p><img alt="" height="307" src="/images/ball-sending-6.png" width="410"/></p>
 <p>第一版本的送球機構</p>
-<p><img alt="" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages/images/ball-sending-7.png"/></p>
+<p><img alt="" height="678" src="/images/ball-sending-7.png" width="989"/></p>
 <p><span><a href="https://cad.onshape.com/documents/b18361a82967351a03443cb3/w/57dbf787f13f8e59f9456130/e/f395ea88668a19d13c53dc5b">送球機構第一版本</a></span></p>
 <p><a href="https://cad.onshape.com/documents/66feb481cd24f89f41aba07f/w/44386fafdc7d7515dd51458e/e/d842adf8eb6d1d0280a7bd23"></a>V-rep模擬</p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/qCcklTJMO0c" width="560"></iframe></p>
-<p><span> </span></p>
+<p><span>最後小組投票選擇第一版本</span></p>
+<p><span> ---------------------------------------------------------------------------------------------------</span></p>
+<p><span>第二版本</span></p>
+<p><span>門框</span></p>
+<p><span><img alt="" height="628" src="/images/ball-sending-1.png" width="783"/></span></p>
+<p><span>圓管 設計成可以直角 可以直接跟門框跟球檯貼合</span></p>
+<p><span><img alt="" height="713" src="/images/ball-sending-8.png" width="577"/></span></p>
+<p><span>軌道設計</span></p>
+<p><span><img alt="" height="539" src="/images/ball-sending-9.png" width="1009"/></span></p>
+<p><span></span></p>
+<p><span><img alt="" height="655" src="/images/ball-sending-10.png" width="1069"/></span></p>
+<p><span><img alt="" height="559" src="/images/ball-sending-11.png" width="1443"/></span></p>
+<p><span><img alt="" height="365" src="/images/ball-sending-12.png" width="1059"/></span></p>
+<p>第二版本送球機構</p>
+<p><img alt="" height="545" src="/images/ball-sending-13.png" width="1035"/><span></span></p>
 <p><span><a href="https://cad.onshape.com/documents/bae8bc92c292636ff6a07042/w/36dd5447b2c7b1e761303f8e/e/d3856f293649335c602fab25">送球機構第二版本</a>(</span><span>將軌道隱藏在球檯中避免實際使用中軌道跟球員桿有干涉)</span><br/><span></span></p>
 <p><span>V-rep模擬</span></p>
 <p><span></span></p>
