--- a/reveal/index.html
+++ b/reveal/index.html
@@ -337,17 +337,9 @@ Created by [40423160 許育誠]
 
 <section data-markdown>
     <script type="text/template">
-# 第八週
+# 送球機構解說
 
-這周是在做實習任務三http://www.coppeliarobotics.com/helpFiles/en/buildingAModelTutorial.htm 
 
-先利用onshape繪製類似的構造
-
-https://cad.onshape.com/documents/d4300f1277b25602bbac6e5a/w/2f8dde5ed823b97d20ac86c1/e/e56abdd445d4c86cb793d442
-
-再轉入到vrep裡面做模擬
-不過遇到許多問題還沒做完
-這周我把個人網誌跟投影片做出來
 
     </script>
 </section>
