--- a/content/送球裝置.html
+++ b/content/送球裝置.html
@@ -67,26 +67,41 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='W16.html'>W16</a><li><a href='W17.html'>W17</a></li></ul><li><a href='期中影片.html'>期中影片</a><li><a href='個人影片.html'>個人影片</a><ul><li><a href='建立可攜裝置.html'>建立可攜裝置</a><li><a href='BubbleRob tutorial.html'>BubbleRob tutorial</a><li><a href='實習任務三.html'>實習任務三</a><li><a href='建立虛擬主機.html'>建立虛擬主機</a><li><a href='送球機構.html'>送球機構</a><li><a href='系統功能展示.html'>系統功能展示</a></li></ul><li><a href='送球裝置.html'>送球裝置</a><li><a href='期末影片.html'>期末影片</a><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>系統功能展示 << <a href='系統功能展示.html'>Previous</a> <a href='期末影片.html'>Next</a> >> 期末影片<br /><h1>送球裝置</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='W16.html'>W16</a><li><a href='W17.html'>W17</a></li></ul><li><a href='期中影片.html'>期中影片</a><li><a href='個人影片.html'>個人影片</a><ul><li><a href='建立可攜裝置.html'>建立可攜裝置</a><li><a href='BubbleRob tutorial.html'>BubbleRob tutorial</a><li><a href='實習任務三.html'>實習任務三</a><li><a href='建立虛擬主機.html'>建立虛擬主機</a><li><a href='送球機構.html'>送球機構</a><li><a href='系統功能展示.html'>系統功能展示</a></li></ul><li><a href='送球裝置.html'>送球裝置</a><li><a href='期末影片.html'>期末影片</a><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>系統功能展示 << <a href='系統功能展示.html'>Previous</a> <a href='期末影片.html'>Next</a> >> 期末影片<br /><h1>送球裝置</h1>
+<p>第一版本</p>
 <p>門框</p>
-<p><img alt="" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages./../images/ball-sending-1.png"/></p>
+<p><img alt="" height="628" src="./../images/ball-sending-1.png" width="783"/></p>
 <p>軌道</p>
-<p><img alt="" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages./../images/ball-sending-2.png"/></p>
+<p><img alt="" height="614" src="./../images/ball-sending-2.png" width="1128"/></p>
 <p>因為軌道設計成斜的 所以球會自己滾到低處</p>
-<p><img alt="" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages./../images/ball-sending-3.png"/></p>
+<p><img alt="" height="251" src="./../images/ball-sending-3.png" width="1062"/></p>
 <p>圓管 球藉著圓管升到高點可以重新回到球檯中</p>
-<p><img alt="" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages./../images/ball-sending-4.png"/></p>
+<p><img alt="" height="533" src="./../images/ball-sending-4.png" width="499"/></p>
 <p>螺旋管 旋轉讓球可以升到高點</p>
-<p><img alt="" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages./../images/ball-sending-5.png"/></p>
+<p><img alt="" height="553" src="./../images/ball-sending-5.png" width="352"/></p>
 <p>中間的軌道 因為重兩邊都可以進球到圓管中會有許多設計上的問題</p>
 <p>所以求先送到軌道中間再進到圓管中</p>
-<p><img alt="" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages./../images/ball-sending-6.png"/></p>
+<p><img alt="" height="307" src="./../images/ball-sending-6.png" width="410"/></p>
 <p>第一版本的送球機構</p>
-<p><img alt="" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages./../images/ball-sending-7.png"/></p>
+<p><img alt="" height="678" src="./../images/ball-sending-7.png" width="989"/></p>
 <p><span><a href="https://cad.onshape.com/documents/b18361a82967351a03443cb3/w/57dbf787f13f8e59f9456130/e/f395ea88668a19d13c53dc5b">送球機構第一版本</a></span></p>
 <p><a href="https://cad.onshape.com/documents/66feb481cd24f89f41aba07f/w/44386fafdc7d7515dd51458e/e/d842adf8eb6d1d0280a7bd23"></a>V-rep模擬</p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/qCcklTJMO0c" width="560"></iframe></p>
-<p><span> </span></p>
+<p><span>最後小組投票選擇第一版本</span></p>
+<p><span> ---------------------------------------------------------------------------------------------------</span></p>
+<p><span>第二版本</span></p>
+<p><span>門框</span></p>
+<p><span><img alt="" height="628" src="./../images/ball-sending-1.png" width="783"/></span></p>
+<p><span>圓管 設計成可以直角 可以直接跟門框跟球檯貼合</span></p>
+<p><span><img alt="" height="713" src="./../images/ball-sending-8.png" width="577"/></span></p>
+<p><span>軌道設計</span></p>
+<p><span><img alt="" height="539" src="./../images/ball-sending-9.png" width="1009"/></span></p>
+<p><span></span></p>
+<p><span><img alt="" height="655" src="./../images/ball-sending-10.png" width="1069"/></span></p>
+<p><span><img alt="" height="559" src="./../images/ball-sending-11.png" width="1443"/></span></p>
+<p><span><img alt="" height="365" src="./../images/ball-sending-12.png" width="1059"/></span></p>
+<p>第二版本送球機構</p>
+<p><img alt="" height="545" src="./../images/ball-sending-13.png" width="1035"/><span></span></p>
 <p><span><a href="https://cad.onshape.com/documents/bae8bc92c292636ff6a07042/w/36dd5447b2c7b1e761303f8e/e/d3856f293649335c602fab25">送球機構第二版本</a>(</span><span>將軌道隱藏在球檯中避免實際使用中軌道跟球員桿有干涉)</span><br/><span></span></p>
 <p><span>V-rep模擬</span></p>
 <p><span></span></p>
