--- a/reveal/index.html
+++ b/reveal/index.html
@@ -41,14 +41,14 @@
     <script type="text/template">
 ## 2019 Spring 協同產品設計實習
 
-### 國立虎尾科技大學
-### 機械設計工程系
+### 國立虎尾科技大學  機械設計工程系
 * [個人倉儲](https://github.com/s40423160/cd2019)
 * [個人網站](https://s40423160.github.io/cd2019/content/index.html)
 * [bg3倉儲](https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1)
-* [bg3組網站](https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/content/index.html)
+* [bg3網站](https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/content/index.html)
 * [全班倉儲](https://github.com/scrum-1/cd2019b)
 * [全班網站](http://cpgx.kmol.info/cd2019b/content/index.html)
+* [youtube頻道](https://www.youtube.com/channel/UC3Q2XeaQy3mBzOziZ6s6rhg/videos)
 
 <small>
 Created by [40423160 許育誠]
