--- a/content/送球裝置.html
+++ b/content/送球裝置.html
@@ -94,6 +94,8 @@ $(function(){
 <p><span><img alt="" height="628" src="./../images/ball-sending-1.png" width="783"/></span></p>
 <p><span>圓管 設計成可以直角 可以直接跟門框跟球檯貼合</span></p>
 <p><span><img alt="" height="713" src="./../images/ball-sending-8.png" width="577"/></span></p>
+<p><span>螺旋桿</span></p>
+<p><span><img alt="" height="553" src="./../images/ball-sending-5.png" width="352"/></span></p>
 <p><span>軌道設計</span></p>
 <p><span><img alt="" height="539" src="./../images/ball-sending-9.png" width="1009"/></span></p>
 <p><span></span></p>
