--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -222,32 +222,46 @@
 <p><a href="https://drive.google.com/open?id=11aCOQWTxuy1qIem9NXHCeACJTQzI17YD">電腦對電腦</a></p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/qP5MVSiju8U" width="560"></iframe></p>
 <h1>送球裝置</h1>
+<p>第一版本</p>
 <p>門框</p>
-<p><img alt="" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages/images/ball-sending-1.png"/></p>
+<p><img alt="" height="628" src="/images/ball-sending-1.png" width="783"/></p>
 <p>軌道</p>
-<p><img alt="" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages/images/ball-sending-2.png"/></p>
+<p><img alt="" height="614" src="/images/ball-sending-2.png" width="1128"/></p>
 <p>因為軌道設計成斜的 所以球會自己滾到低處</p>
-<p><img alt="" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages/images/ball-sending-3.png"/></p>
+<p><img alt="" height="251" src="/images/ball-sending-3.png" width="1062"/></p>
 <p>圓管 球藉著圓管升到高點可以重新回到球檯中</p>
-<p><img alt="" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages/images/ball-sending-4.png"/></p>
+<p><img alt="" height="533" src="/images/ball-sending-4.png" width="499"/></p>
 <p>螺旋管 旋轉讓球可以升到高點</p>
-<p><img alt="" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages/images/ball-sending-5.png"/></p>
+<p><img alt="" height="553" src="/images/ball-sending-5.png" width="352"/></p>
 <p>中間的軌道 因為重兩邊都可以進球到圓管中會有許多設計上的問題</p>
 <p>所以求先送到軌道中間再進到圓管中</p>
-<p><img alt="" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages/images/ball-sending-6.png"/></p>
+<p><img alt="" height="307" src="/images/ball-sending-6.png" width="410"/></p>
 <p>第一版本的送球機構</p>
-<p><img alt="" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages/images/ball-sending-7.png"/></p>
+<p><img alt="" height="678" src="/images/ball-sending-7.png" width="989"/></p>
 <p><span><a href="https://cad.onshape.com/documents/b18361a82967351a03443cb3/w/57dbf787f13f8e59f9456130/e/f395ea88668a19d13c53dc5b">送球機構第一版本</a></span></p>
 <p><a href="https://cad.onshape.com/documents/66feb481cd24f89f41aba07f/w/44386fafdc7d7515dd51458e/e/d842adf8eb6d1d0280a7bd23"></a>V-rep模擬</p>
 <p><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/qCcklTJMO0c" width="560"></iframe></p>
-<p><span> </span></p>
+<p><span>最後小組投票選擇第一版本</span></p>
+<p><span> ---------------------------------------------------------------------------------------------------</span></p>
+<p><span>第二版本</span></p>
+<p><span>門框</span></p>
+<p><span><img alt="" height="628" src="/images/ball-sending-1.png" width="783"/></span></p>
+<p><span>圓管 設計成可以直角 可以直接跟門框跟球檯貼合</span></p>
+<p><span><img alt="" height="713" src="/images/ball-sending-8.png" width="577"/></span></p>
+<p><span>軌道設計</span></p>
+<p><span><img alt="" height="539" src="/images/ball-sending-9.png" width="1009"/></span></p>
+<p><span></span></p>
+<p><span><img alt="" height="655" src="/images/ball-sending-10.png" width="1069"/></span></p>
+<p><span><img alt="" height="559" src="/images/ball-sending-11.png" width="1443"/></span></p>
+<p><span><img alt="" height="365" src="/images/ball-sending-12.png" width="1059"/></span></p>
+<p>第二版本送球機構</p>
+<p><img alt="" height="545" src="/images/ball-sending-13.png" width="1035"/><span></span></p>
 <p><span><a href="https://cad.onshape.com/documents/bae8bc92c292636ff6a07042/w/36dd5447b2c7b1e761303f8e/e/d3856f293649335c602fab25">送球機構第二版本</a>(</span><span>將軌道隱藏在球檯中避免實際使用中軌道跟球員桿有干涉)</span><br/><span></span></p>
 <p><span>V-rep模擬</span></p>
 <p><span></span></p>
-<p><span></span><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/cnAd8WULxA4" width="560"></iframe></p>
-<h1>期末影片</h1>
-<p></p>
-<h1>協同倉儲</h1>
+<p><span></span><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/cnAd8WULxA4" width="560"></iframe></p><h1>期末影片</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/FbAMh2A8I2A" width="560"></iframe></p>
+<p></p><h1>協同倉儲</h1>
 <p></p>
 <p>小組倉儲: <a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1</a></p>
 <p>小組網站: <a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1" rel="nofollow">https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1</a></p>
