--- a/config/content.htm
+++ b/config/content.htm
@@ -268,11 +268,13 @@
 <p></p>
 <h1>期末考</h1>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/JsVnFipx1NI" width="560"></iframe></p>
+<p>製作過程</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/cb6dQJym8RA" width="560"></iframe></p>
 <p>透過方向鍵 上下左右操控XY軸<br/>透過WS控制Z軸<br/>JK控制夾跟放</p>
 <p><a href="https://github.com/s40423160/cd2019/blob/master/40423160-final%20test.ttt">V-rep檔案</a></p>
-<p><a href="https://cad.onshape.com/documents/4853abc4c6b0dfde0f5a8187/v/ffc1871d4c9dfebea191d474/e/fa66f9b55cc7d165db8e6a6f">onshape</a></p>
-<p><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/issues/2">issues</a></p>
-<h1>協同倉儲</h1>
+<p><a href="https://cad.onshape.com/documents/4853abc4c6b0dfde0f5a8187/v/ffc1871d4c9dfebea191d474/e/fa66f9b55cc7d165db8e6a6f">onshape</a>  </p>
+<p><a href="https://cad.onshape.com/documents/4853abc4c6b0dfde0f5a8187/v/b7690cf457b90968c0d24e18/e/fa66f9b55cc7d165db8e6a6f">夾爪</a></p>
+<p><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/issues/2">issues</a></p><h1>協同倉儲</h1>
 <p></p>
 <p>小組倉儲: <a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1</a></p>
 <p>小組網站: <a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1" rel="nofollow">https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1</a></p>
