--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -7,7 +7,8 @@
 <p>小組網站: <a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1" rel="nofollow">https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1</a></p>
 <p>小組blog: <a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/blog" rel="nofollow">https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/blog</a></p>
 <p>期末倉儲:<a href="https://github.com/scrum-1/cd2019b">https://github.com/scrum-1/cd2019b</a></p>
-<p>期末網站: <a href="http://cpgx.kmol.info/cd2019b/content/index.html">http://cpgx.kmol.info/cd2019b/content/index.html</a></p><h1>課程</h1>
+<p>期末網站: <a href="http://cpgx.kmol.info/cd2019b/content/index.html">http://cpgx.kmol.info/cd2019b/content/index.html</a></p>
+<h1>課程</h1>
 <p><span>自 1990 年 <a href="https://en.wikipedia.org/wiki/HTML">HTML</a> 與 <a href="https://en.wikipedia.org/wiki/World_Wide_Web">WWW</a> 伺服器首度出現在一台 <a href="https://en.wikipedia.org/wiki/NeXT">NeXT</a> 電腦上, 就已經揭示一個新世代的開始, 經過近 30 年的發展, 目前的網際環境已經能夠與單機操作系統上的應用程式緊密結合, 許多應用程式的開發, 透過網路與分散式版次管理系統, 幾乎隨時都在持續改進.<br/><br/>身為機械設計工程師, 必須明確了解在網際技術不斷推升的歷程, 過去厚重且無法分割的大型套件, 將逐漸被敏捷可攜的雲端應用所取代, <a href="https://en.wikipedia.org/wiki/Onshape">Onshape</a> 的開發團隊, 在 2012 成立時, 便已清楚看到此一趨勢, 使用者只要透過瀏覽器或 App 就能協同進行產品的機械設計與分析.<br/><br/>但是, 一套試圖集大成的雲端套件, 絕無法滿足未來網際時代新產品開發過程中的諸多需求, 必須由每一位機械設計工程師做起, 充分了解網路與電腦的應用範圍, 在既有基礎上, 有能力在網際環境中搭建屬於自己能夠掌控的流程, 開發合用的雲端程式.</span></p>
 <p><span>為了讓協同產品開發過程中的表達不至於混亂, 於是導入分散式版次管理的工具, 包括 Git 與 Fossil SCM, 為了能夠善用電腦與網路進行表達, 於是將靜態內容放在 Github Pages 或自行架設的 Nginx 伺服器中, 至於能夠即時更動的動態內容系統則採用雲端 Heroku 或自行架設的 uwsgi 網際環境中.</span></p>
 <p><span>為了能夠快速讓產品開發者將概念轉化為數位模擬系統, KMOL 採用 Python 建構軟體雛形, 並設法利用 Cython 技術, 以 C++ 的執行速度進行工程分析.<br/><br/>為了讓成員有機會一窺各種開源工具的內部設計, KMOL 在 Windows 10 64 位元環境中以 Msys2 編譯 Solvespace、Fossil SCM、V-rep 以及 Range CAE 套件.</span></p>
@@ -261,9 +262,19 @@
 <p><span><a href="https://cad.onshape.com/documents/bae8bc92c292636ff6a07042/w/36dd5447b2c7b1e761303f8e/e/d3856f293649335c602fab25">送球機構第二版本</a>(</span><span>將軌道隱藏在球檯中避免實際使用中軌道跟球員桿有干涉)</span><br/><span></span></p>
 <p><span>V-rep模擬</span></p>
 <p><span></span></p>
-<p><span></span><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/cnAd8WULxA4" width="560"></iframe></p><h1>期末影片</h1>
+<p><span></span><iframe allowfullscreen="allowfullscreen" data-mce-fragment="1" height="314" src="https://www.youtube.com/embed/cnAd8WULxA4" width="560"></iframe></p>
+<h1>期末影片</h1>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/FbAMh2A8I2A" width="560"></iframe></p>
-<p></p><h1>協同倉儲</h1>
+<p></p>
+<h1>期末考</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/JsVnFipx1NI" width="560"></iframe></p>
+<p>製作過程</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/cb6dQJym8RA" width="560"></iframe></p>
+<p>透過方向鍵 上下左右操控XY軸<br/>透過WS控制Z軸<br/>JK控制夾跟放</p>
+<p><a href="https://github.com/s40423160/cd2019/blob/master/40423160-final%20test.ttt">V-rep檔案</a></p>
+<p><a href="https://cad.onshape.com/documents/4853abc4c6b0dfde0f5a8187/v/ffc1871d4c9dfebea191d474/e/fa66f9b55cc7d165db8e6a6f">onshape</a>  </p>
+<p><a href="https://cad.onshape.com/documents/4853abc4c6b0dfde0f5a8187/v/b7690cf457b90968c0d24e18/e/fa66f9b55cc7d165db8e6a6f">夾爪</a></p>
+<p><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/issues/2">issues</a></p><h1>協同倉儲</h1>
 <p></p>
 <p>小組倉儲: <a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1</a></p>
 <p>小組網站: <a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1" rel="nofollow">https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1</a></p>
