--- a/content/期末考.html
+++ b/content/期末考.html
@@ -69,8 +69,10 @@ $(function(){
 </confmenu></header>
 <div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='W16.html'>W16</a><li><a href='W17.html'>W17</a></li></ul><li><a href='期中影片.html'>期中影片</a><li><a href='個人影片.html'>個人影片</a><ul><li><a href='建立可攜裝置.html'>建立可攜裝置</a><li><a href='BubbleRob tutorial.html'>BubbleRob tutorial</a><li><a href='實習任務三.html'>實習任務三</a><li><a href='建立虛擬主機.html'>建立虛擬主機</a><li><a href='送球機構.html'>送球機構</a><li><a href='系統功能展示.html'>系統功能展示</a></li></ul><li><a href='送球裝置.html'>送球裝置</a><li><a href='期末影片.html'>期末影片</a><li><a href='期末考.html'>期末考</a><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>期末影片 << <a href='期末影片.html'>Previous</a> <a href='協同倉儲.html'>Next</a> >> 協同倉儲<br /><h1>期末考</h1>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/JsVnFipx1NI" width="560"></iframe></p>
+<p>製作過程</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/cb6dQJym8RA" width="560"></iframe></p>
 <p>透過方向鍵 上下左右操控XY軸<br/>透過WS控制Z軸<br/>JK控制夾跟放</p>
 <p><a href="https://github.com/s40423160/cd2019/blob/master/40423160-final%20test.ttt">V-rep檔案</a></p>
-<p><a href="https://cad.onshape.com/documents/4853abc4c6b0dfde0f5a8187/v/ffc1871d4c9dfebea191d474/e/fa66f9b55cc7d165db8e6a6f">onshape</a></p>
-<p><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/issues/2">issues</a></p>
-<br />期末影片 << <a href='期末影片.html'>Previous</a> <a href='協同倉儲.html'>Next</a> >> 協同倉儲</section></div></body></html>
+<p><a href="https://cad.onshape.com/documents/4853abc4c6b0dfde0f5a8187/v/ffc1871d4c9dfebea191d474/e/fa66f9b55cc7d165db8e6a6f">onshape</a>  </p>
+<p><a href="https://cad.onshape.com/documents/4853abc4c6b0dfde0f5a8187/v/b7690cf457b90968c0d24e18/e/fa66f9b55cc7d165db8e6a6f">夾爪</a></p>
+<p><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/issues/2">issues</a></p><br />期末影片 << <a href='期末影片.html'>Previous</a> <a href='協同倉儲.html'>Next</a> >> 協同倉儲</section></div></body></html>
